--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ input {
 	margin-right: 5px;
 }
 
+input[type="text"] {
+	border: 1px solid black;
+}
+
 input[type="submit"] {
 	box-shadow: 0 0 2px black;
 }
