AJAX Request added

--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,12 @@ body {
 .background-image {
 	height: 100%;
 	width: 100%;
-	background-image: url('http://www.vectorfree.com/media/vectors/flowing-technology-background.jpg');
+	background-image: url('http://p1.pichost.me/i/56/1803300.jpg');
 	background-size: cover;
 	position: fixed;
 	left: 0;
 	right: 0;
+	top: 10.55em;
 	z-index: 1;
 }
 
@@ -32,12 +33,10 @@ header, form {
 
 header {
 	color: white;
-	-webkit-text-stroke: 1px black;
-	text-shadow: 0 0 2px black;
 	position: relative;
 	left: -2em;
 	padding: 1em;
-	background-color: rgba(0, 0, 0, 0.4);
+	background-color: #07709F;
 	width: 100%;
 	height: 100%;
 	font-family: 'Lato', sans-serif;
@@ -48,20 +47,29 @@ header {
 header h1 {
 	margin: 0 auto;
 	width: 80%;
+	-webkit-text-stroke: 1px black;
+}
+
+header p {
+	width: 98%;
+}
+
+form {
+	float: left;
 }
 
 form, label {
-	display: block;
+	display: inline-block;
 }
 
 label {
 	position: relative;
 	margin: 0 auto;
 	font-size: 1.2em;
-	margin-bottom: 1em;
-	background-color: rgba(255, 255, 255, 0.5);
+	margin: 1em;
+	background-color: rgba(255, 255, 255, 0.7);
 	width: 7em;
-	padding: .5em;
+	padding: .4em;
 	border-radius: 10px;
 	box-shadow: 0 0 5px black;
 }
@@ -80,6 +88,7 @@ input[type="text"] {
 
 input[type="submit"] {
 	box-shadow: 0 0 2px black;
+	width: 5em;
 }
 
 input[type="submit"]:hover {
