--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ input[type="text"] {
 input[type="submit"] {
 	box-shadow: 0 0 2px black;
 	width: 5em;
+	margin-top: 1em;
 }
 
 input[type="submit"]:hover {
