--- a/css/style.css
+++ b/css/style.css
@@ -99,18 +99,18 @@ input[type="submit"]:hover {
 .results {
 	display: none;
 	position: relative;
-	top: 4em;
+	float: right;
 	text-align: center;
-	left: -2.5em;
-}
-.results li {
-	display: inline-block;
-	min-width: 350px; 
-	height: 300px; 
-	max-width: 500px; 
-	margin: 0 auto;
+	background-color: rgba(255, 255, 255, 0.7);
+	padding: 2em;
+	top: 2em;
+	right: 10em;
+	width: 15em;
+	padding: .4em;
+	border-radius: 10px;
+	box-shadow: 0 0 5px black;
 }
 
-.results li:first-child {
-	margin-right: 12em;
+span {
+	color: red;
 }
